header logo and text overflow needs fix

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -7,3 +7,12 @@
   line-height: 1.2;
   color: #545454;
 }
+
+.footer__copyright {
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.2;
+  color: #545454;
+  margin: 0;
+}
