--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,7 +1,9 @@
 .header {
-  margin-top: 45px;
-  width: 100%;
+  padding-top: 45px;
   border-bottom: solid rgba(84, 84, 84, 0.7) 1px;
   box-sizing: border-box;
-  padding-bottom: 36px;
+}
+
+.header__logo {
+  padding-bottom: 41px;
 }
