--- a/blocks/page.css
+++ b/blocks/page.css
@@ -9,3 +9,9 @@
   margin: 0 auto;
   padding: 0 19px;
 }
+
+@media screen and (min-width: 320px) and (max-width: 618px) {
+  .page__content {
+    padding: 0;
+  }
+}
