--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -68,20 +68,32 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 775px) {
+@media screen and (min-width: 619px) and (max-width: 775px) {
   .profile__info {
-    max-width: 150px;
+    /* max-width: 150px; */
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 618px) {
   .header {
-    margin-top: 28px;
+    padding-top: 28px;
   }
+
+  .header__logo {
+    padding-left: 27px;
+    padding-bottom: 32px;
+    width: 126px;
+    height: 24px;
+  }
+
   .profile {
     width: 282px;
     flex-direction: column;
-    margin: 0 auto;
+    margin: 42px auto 0;
+    padding: 0 19px;
   }
 
   .profile__info {
@@ -90,6 +102,9 @@
     grid-gap: 14px 10px;
     margin-bottom: 36px;
     min-width: 282;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 
   .profile__title {
@@ -108,7 +123,16 @@
     width: 282px;
   }
 
+  .profile__edit-button {
+    padding-right: 19px;
+  }
+
   .cards {
     margin-top: 36px;
+    padding: 0 19px;
+  }
+
+  .footer {
+    padding: 0 19px;
   }
 }
